[tool.poetry]
name = "dia-01"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "dia_01"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
ipython = "^8.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
